Refactor to use GameOverScene to handle the game over logic.

--- a/Starwar/Starwar.csproj
+++ b/Starwar/Starwar.csproj
@@ -39,6 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="DisposableObject.cs" />
+    <Compile Include="GameOverScene.cs" />
     <Compile Include="Sprites\AnimatedSprite.cs" />
     <Compile Include="Sprites\BackgroundSprite.cs" />
     <Compile Include="Sprites\EnemySprite.cs" />
@@ -72,9 +73,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="spaceship.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <!-- Specify the search path explicitly so the ResolveAssemblyReferences task picks the right ones -->
   <Target Name="BeforeResolveReferences">
