--- a/Starwar.ConfigTool/Starwar.ConfigTool.csproj
+++ b/Starwar.ConfigTool/Starwar.ConfigTool.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\Starwar\bin\WindowsGL\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -26,7 +26,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\Starwar\bin\WindowsGL\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -79,6 +79,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="spaceship.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Starwar.Common\Starwar.Common.csproj">
+      <Project>{a34685bc-9f92-41d5-8f18-562412c540d4}</Project>
+      <Name>Starwar.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
