added the laser generation frequency.

--- a/res/settings.json
+++ b/res/settings.json
@@ -1,1 +1,1 @@
-{"NumOfEnemiesPerSecond":3,"ShowDebugInfo":false,"LiveForever":false,"FullScreen":false}
+{"NumOfEnemiesPerSecond":3,"NumOfLasersPerSecond":10,"ShowDebugInfo":false,"LiveForever":false,"FullScreen":false}
