--- a/Starwar/packages.config
+++ b/Starwar/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NLua" version="1.3.2.1" targetFramework="net40" />
+  <package id="MonoGame.Framework.DesktopGL" version="3.5.1.1679" targetFramework="net461" />
+  <package id="NLua" version="1.3.2.1" targetFramework="net40" requireReinstallation="true" />
 </packages>
